Fixed dependancy error. The project should now work. Possible warringing about version of CDP